# Bulk-Email-Cli-CLient

./: Cargo.toml  Readme.md
.github/workflows/: rust.yml  test.yml
example/: example.csv  test.csv
src/: cli.rs  email.rs  error.rs  main.rs  tokens.rs
templates/: email.html  replacement_test.html
