[package]
name = "email-sender"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lettre = { version = "0.11.4", features = [
	"tokio1-rustls-tls",
	"tokio1-native-tls",
	"mime03"
] }
dotenv = "0.15.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.196", features = ["derive"] }
csv = "1.3.0"
paste = "1.0.14"
clap = { version = "4.5.0", features = ["derive"] }
thiserror = "1.0.57"
mime = "0.3.17"
mime_guess = "2.0.4"
serde_json = "1.0.113"
